--- a/src/components/products/Product.css
+++ b/src/components/products/Product.css
@@ -4,7 +4,7 @@
 
 .product {
     position: relative;
-    margin: 15px 0px;
+    margin: 15px;
     -webkit-box-shadow: 0px 0px 0px 0px #E4E7ED, 0px 0px 0px 1px #E4E7ED;
     box-shadow: 0px 0px 0px 0px #E4E7ED, 0px 0px 0px 1px #E4E7ED;
     -webkit-transition: 0.2s all;
