--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #2B2D42;
   font-weight: 700;
   margin: 0 0 10px;
+  text-transform: uppercase;
 }
 
 a {
@@ -54,6 +55,11 @@ ul, ol {
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
 }
+
+.primary-btn:disabled {
+  background-color: #d1002357;
+}
+
 
 .primary-btn:hover, .primary-btn:focus {
   opacity: 0.9;
