updating review form

--- a/src/App.css
+++ b/src/App.css
@@ -244,6 +244,11 @@ textarea.input {
   max-height: 800px;
 }
 
+.errorClass {
+  color: #ff0000;
+  font-size: 12px;
+}
+
 /*----------------------------*\
 	Section
 \*----------------------------*/
