--- a/src/components/productView/productOverview/ProductOverview.css
+++ b/src/components/productView/productOverview/ProductOverview.css
@@ -135,8 +135,19 @@
     display: inline-block;
     text-transform: uppercase;
     font-size: 12px;
+    color: #2B2D42;
+    font-weight: 500;
+    -webkit-transition: 0.2s color;
+    transition: 0.2s color;
   }
-  
+
+  .product-details .product-btns li:hover,
+  .product-details .product-btns li:focus,
+  .product-details .product-btns .removed{
+    color: #D10024;
+    text-decoration: none;
+    outline: none;
+  }
   .product-details .product-btns li+li {
     margin-left: 15px;
   }
