--- a/src/components/store/asideFilter/AsideFilter.css
+++ b/src/components/store/asideFilter/AsideFilter.css
@@ -17,6 +17,10 @@
   .checkbox-filter .input-radio label, .checkbox-filter .input-checkbox label {
     font-size: 12px;
   }
+
+  .checkbox-filter .input-checkbox label .fa-star{
+    color:#D10024;
+  }
   
   .checkbox-filter .input-radio label small, .checkbox-filter .input-checkbox label small {
     color: #8D99AE;
