--- a/src/layout/header/topHeader/TopHeader.css
+++ b/src/layout/header/topHeader/TopHeader.css
@@ -4,7 +4,7 @@
     background-color: #1E1F29;
   }
   
-  #top-header .header-links li {
+  #top-header .header-links li, #top-header .header-links select {
     display: inline-block;
     margin-right: 15px;
     font-size: 12px;
